--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "salesaai-frontend",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://salesaai.github.io/Sales-Assistant-AI",
   "dependencies": {
     "@babel/runtime": "^7.22.10",
     "@emotion/react": "^11.11.1",
@@ -28,7 +29,9 @@
     "start": "set PORT=3002 && react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -55,6 +58,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/events": "^3.0.0",
     "@types/jest": "^27.5.2",
-    "@types/react-router-dom": "^5.3.3"
+    "@types/react-router-dom": "^5.3.3",
+    "gh-pages": "^6.2.0"
   }
 }
