--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "salesaai-frontend",
   "version": "0.1.0",
   "private": true,
-  "homepage": "/Sales-Assistant-AI/",
+  "homepage": "./",
   "dependencies": {
     "@babel/runtime": "^7.22.10",
     "@emotion/react": "^11.11.1",
