--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -13,7 +13,7 @@
       "sizes": "512x512 192x192"
     }
   ],
-  "start_url": ".",
+  "start_url": "/Sales-Assistant-AI/",
   "display": "standalone",
   "theme_color": "#2c3e50",
   "background_color": "#f5f6fa"
