--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,7 +2,7 @@
   "name": "salesaai-frontend",
   "version": "0.1.0",
   "private": true,
-  "homepage": "/",
+  "homepage": "https://salesaai.github.io/Sales-Assistant-AI",
   "dependencies": {
     "@babel/runtime": "^7.22.10",
     "@emotion/react": "^11.11.1",
@@ -27,7 +27,7 @@
   },
   "scripts": {
     "start": "set PORT=3002 && react-scripts start",
-    "build": "PUBLIC_URL=https://salesaai.github.io/Sales-Assistant-AI react-scripts build",
+    "build": "set PUBLIC_URL=https://salesaai.github.io/Sales-Assistant-AI&& react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
