--- a/manifest.json
+++ b/manifest.json
@@ -3,17 +3,17 @@
   "name": "SALESAAI - Real Estate Sales Assistant",
   "icons": [
     {
-      "src": "favicon.svg",
+      "src": "./favicon.svg",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/svg+xml"
     },
     {
-      "src": "logo.svg",
+      "src": "./logo.svg",
       "type": "image/svg+xml",
       "sizes": "512x512 192x192"
     }
   ],
-  "start_url": "/Sales-Assistant-AI/",
+  "start_url": ".",
   "display": "standalone",
   "theme_color": "#2c3e50",
   "background_color": "#f5f6fa"
