--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,20 @@
 {
-  "short_name": "SALESAAI",
-  "name": "SALESAAI - Real Estate Sales Assistant",
+  "short_name": "Sales AI",
+  "name": "Sales Assistant AI",
   "icons": [
     {
-      "src": "./favicon.svg",
+      "src": "favicon.svg",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/svg+xml"
     },
     {
-      "src": "./logo.svg",
+      "src": "logo.svg",
       "type": "image/svg+xml",
-      "sizes": "512x512 192x192"
+      "sizes": "192x192 512x512"
     }
   ],
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#2c3e50",
-  "background_color": "#f5f6fa"
+  "background_color": "#ffffff"
 }
